# Knowledge_Library

./: .env.example  .env.test  .gitignore  CONTRIBUTING.md  LICENSE  ORGANIZATION_PLAN.md  Procfile  README.md  SECURITY.md  TEMPLATE_STRUCTURE.md  advanced_type_annotations.py  cloudflare_deploy.sh  cloudflare_deployment.py  comprehensive_type_annotations.py  create_github_repo.bat  create_repo.bat  deploy.bat  deploy.py  deploy_templates.bat  deploy_templates.sh  deployment_report.json  deployment_verification.py  final_deployment_push.bat  final_push.bat  generate_template.bat  generate_template.py  github_auth.bat  github_repo_create.bat  github_repo_create.sh  improve_type_annotations.bat  improve_type_annotations.py  install_type_stubs.bat  library_metadata.json  lint_and_fix.bat  markdown2.pyi  markdown2_type_stubs.py  prepare_deployment.bat  push_to_github.bat  pyproject.toml  pytest.ini  (+12 more)
.github/: release-drafter.yml
Library_Resources/: PROJECT_README.md  SYSTEM_REVIEW_REPORT.json  content_processor.py  docx_to_markdown_converter.py  generate_readme.py  index.html  library_metadata.json  metadata_enricher.py  navigation.json  organize_templates.py  requirements.txt  sitemap.html  template_generator.py  template_renderer.js  template_styles.css  template_validator.py  templates.html  usage_tracking.json
Templates_Markdown/: Comprehensive White Paper Outline Template.md  High-Converting Email Newsletter Template.md  Press Release Template.md  Social Media Carousel Post Template.md  The Ultimate Blog Post Template.md  Webinar_Workshop Outline Template.md
(+113 files in other folders)
