[tool.poetry]
name = "knowledge-library"
version = "0.1.0"
description = "Comprehensive Knowledge Management Library"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
bandit = "^1.7.5"
safety = "^2.3.4"
mypy = "^1.3.0"
ruff = "^0.0.272"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=xml"

[tool.coverage.run]
source = ["tools"]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I"]

[tool.mypy]
ignore_missing_imports = true
